<resources>
    <string name="app_name">France Health Association</string>
    <string name="accueil">Home</string>
    <string name="don">Donation</string>
    <string name="assoc">Associations</string>
    <string name="profil">Profile</string>
    <string name="accessibilite">Accessibility</string>
    <string name="faire_un_don">Make a donation</string>

    <!-- accueil -->
    <string name="accueil_part1">📢 Support associations! 💙</string>
    <string name="accueil_part2">Your donation is essential to defending patients\' rights and improving our healthcare system</string>
    <string name="accueil_part3">🙏 Each contribution matters!</string>
    <string name="accueil_part4">Together, let\'s take action for a fairer healthcare system accessible to all.</string>
    <string name="accueil_part5">Don\'t know which association to donate to? 🤔</string>
    <string name="accueil_part6">Discover the different associations and find the one that\'s right for you. 💙</string>
    <string name="accueil_part7">Discover the associations</string>

    <!-- don -->
    <string name="choisir_assos">Choose an association</string>
    <string name="ou">OR</string>
    <string name="toute_assos">👉  <u>Discover all associations</u></string>
    <string name="choisir_un_montant">Choose an amount</string>
    <string name="type_don">Donation type</string>
    <string name="don_unique">One-time donation</string>
    <string name="don_recurrent">Recurring donation</string>
    <string name="mensuel">Monthly</string>
    <string name="annuel">Annually</string>
    <string name="carte_bancaire">Credit card</string>
    <string name="paypal">PayPal</string>
    <string name="googlepay">GooglePay</string>
    <string name="apple_pay">ApplePay</string>
    <string name="mode_de_paiement">Payment method</string>
    <string name="payer">Pay</string>

    <!-- btn -->
    <string name="retour">Back</string>
    <string name="suivant">Next</string>
    <string name="sinscrire"><u>Sign up</u></string>

    <!-- connexion/inscription -->
    <string name="mail">Email address</string>
    <string name="mdp">Password</string>
    <string name="se_connecter">Sign in</string>
    <string name="pas_encore_inscrit">Not registered yet?</string>

    <!-- accessibilite -->
    <string name="lecture">Text to Speech</string>
    <string name="stop">Stop</string>
    <string name="taille">Font size</string>
    <string name="daltonisme">Color blindness</string>
    <string name="malvoyant">visually imparaired</string>
    <string name="deuteranopie">Deuteranopia (green)</string>
    <string name="protanopie">Protanopia (red)</string>
    <string name="tritanopie">Tritanopia (blue)</string>

    <!-- langue -->
    <string name="langages">Languages</string>
    <string name="fr">French (Default)</string>
    <string name="en">English</string>
    <string name="cn">Mandarin</string>
    <string name="info">My information</string>
    <string name="civilite">Civility</string>
    <string name="nom">Name</string>
    <string name="mail2">Email address</string>
    <string name="prenom">First name</string>
    <string name="mesdon">My donations</string>
    <string name="mesdonhisto">See my donation history</string>
    <string name="paramapp">App settings</string>
    <string name="changelangue">Change language</string>
    <string name="plusinfo">More information</string>
    <string name="mention">Legal notices</string>
    <string name="politique">Privacy Policy</string>
    <string name="condition">Condition of service</string>
    <string name="deco">Log out</string>
    <string name="suppression">Delete my account</string>

    <!-- inscription -->
    <string name="dejainscrit">Already registered ? </string>
    <string name="connection">Log in !</string>
    <string name="champs">Fields marked with * are required</string>
    <string name="civilite2">Civility *</string>
    <string name="madame">Mrs</string>
    <string name="monsieur">Mr</string>
    <string name="sansreponse">Do not wish to answer</string>
    <string name="autre">Other</string>
    <string name="inscription_nom">Last name *</string>
    <string name="inscription_prenom">First name *</string>
    <string name="inscription_adrmail">Email address *</string>
    <string name="inscription_mdp">Password *</string>
    <string name="inscription_handicap">Accessibility *</string>
    <string name="inscription_confirmer_adrmail">Confirm the email address *</string>
    <string name="inscription_confirmer_mdp">Confirm the password *</string>

    <!-- profil admin -->
    <string name="assospers">Organization</string>
    <string name="donhisto">See donations made to the association</string>

    <!-- les dons-->
    <string name="nom_asso">Association\'s name</string>
    <string name="total">Total of one-time donations</string>
    <string name="totalrecu">"Total received this year "</string>
    <string name="deuxpts">:</string>
    <string name="donsrec">Recurring donations</string>

    <!-- mes dons-->
    <string name="histo">History of my donations</string>
    <string name="mesdonsrec">My recurring donations</string>
    <string name="annuledon">Cancel a recurring \n donation</string>
    <string name="caractere_min">8 characters minimum</string>
    <string name="retaper_mdp">Retype your password</string>
    <string name="retaper_mail">Retype your email</string>
    <string name="error_message_handicap">Choose an option</string>
    <string name="error_message_civ">Please select your title</string>
    <string name="error_message_nom">Please enter your lastname</string>
    <string name="error_message_prenom">Please enter your firstname</string>
    <string name="error_message_mail">Please enter your mail</string>
    <string name="error_message_mdp">Please enter a password (8 characters min)</string>
    <string name="error_message_confirmer_mail">Please enter your email again</string>
    <string name="error_message_confirmer_mail_saisi">The email entered does not match the one previously entered</string>
    <string name="error_message_confirmer_mdp">Please enter your password again</string>
    <string name="error_message_confirmer_mdp_saisi">The password entered does not match the one previously entered</string>
    <string name="message_inscription_reussie">Successful registration</string>
    <string name="error_message_inscription_pas_reussi">Please complete all fields</string>
    <string name="error_message_user_non_existant">This user is not exist</string>
    <string name="error_message_mail_existant">This email is already in use</string>
    <string name="error_message_mdp_incorrect">Password incorrect</string>
    <string name="error_message_champs_vides">Complete all fields</string>
    <string name="error_connexion">Connection error</string>
    <string name="error_message_connexion">Server connection error</string>
    <string name="jan">January</string>
    <string name="fev">February</string>
    <string name="mars">March</string>
    <string name="avr">April</string>
    <string name="mai">May</string>
    <string name="juin">June</string>
    <string name="juil">July</string>
    <string name="aout">August</string>
    <string name="sept">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>
    <string name="pashandicap">None</string>
    <string name="assospersPortrait">Organization</string>
    <string name="assosPortrait">Organization</string>

    <string name="search">Search…</string>
    <string name="select_filtre">Select filters</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="chroniques">Chronic diseases</string>
    <string name="Accidents">Accidents and side effects</string>
    <string name="dépendance">Disability and dependency</string>
    <string name="mentale">Mental health and well-being</string>
    <string name="Droits">Patient rights and access to healthcare</string>
    <string name="Soutien">Support for caregivers and relatives</string>
    <string name="Prévention">Prevention and public health</string>

    <string name="more">More</string>
    <string name="back">Back</string>
    <string name="date_de_fin">End date:</string>
    <string name="date_de_deb">Start date:</string>

    <string name="modepaiement">Please select a payment method</string>
    <string name="donok">You have made a donation!</string>
    <string name="remerciement">thanks you for your donation!</string>
    <string name="retouraccueil">Back to home</string>
    <string name="entrezdate">Please enter a date before proceeding</string>
    <string name="don_connexion">You need to be logged in to make a recurring donation. Do you want to log in?</string>
    <string name="date">Date</string>
    <string name="montanttab">Amount</string>
    <string name="paiementtab">Payment</string>
    <string name="prochaindebit">Next\npayment</string>
    <string name="type">Type</string>
    <string name="donpasselect">No donation selected</string>
    <string name="confir">Confirmation</string>
    <string name="deletedonrec">Are you sure you want to delete this recurring donation?</string>
    <string name="delete">Delete</string>
    <string name="infodon">Donation Information</string>
    <string name="frequence">Frequency</string>
    <string name="deleteaccount">Are you sure you want to delete your account?</string>
    <string name="pbmail">Problem retrieving email</string>
    <string name="moins">MINUS</string>
    <string name="plus">PLUS</string>

</resources>