<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dejainscrit"/>

        <Button
            android:id="@+id/connnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/connection"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/fond_bleu_arrondi"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/champs"
            android:textSize="15sp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/civilite2"
            android:textSize="25sp"
            android:layout_marginBottom="20dp"/>

        <RadioGroup
            android:id="@+id/civilite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp">

            <RadioButton
                android:id="@+id/monsieur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/monsieur"/>

            <RadioButton
                android:id="@+id/madame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/madame"/>

            <RadioButton
                android:id="@+id/sansreponse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/sansreponse"/>

            <RadioButton
                android:id="@+id/autre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/autre"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/suivant"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/suivant"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textColor="@color/black"
        android:background="@drawable/btn_suivant"
        android:layout_marginTop="10dp"/>
</LinearLayout>