<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dejainscrit"/>

        <Button
            android:id="@+id/connnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/connection"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/fond_bleu_arrondi"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/champs"
            android:textSize="15sp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inscription_confirmer_adrmail"
            android:textSize="25sp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/confirmer_adrmail"
            android:background="@drawable/edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/retaper_mail"
            android:padding="10dp">
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/suivant"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/suivant"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textColor="@color/black"
        android:background="@drawable/btn_suivant"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/retour"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textColor="@color/black"
        android:background="@drawable/btn_retour"
        android:layout_marginTop="15dp"/>
</LinearLayout>