<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/text_don"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/fond_bleu">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accueil_part1"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accueil_part2"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accueil_part3"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accueil_part4"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn_don"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faire_un_don"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_marginTop="55dp"
            android:textColor="@color/black"
            android:background="@drawable/btn_faire_don" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/text_don"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accueil_part5"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accueil_part6"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_assos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accueil_part7"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="50dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/btn_decouvrir_assos"/>
    </LinearLayout>
</LinearLayout>