<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <!-- bloc choix assos -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp"
        android:background="@drawable/fond_violet_arrondi"
        android:gravity="center"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_don"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start">
            <RadioGroup
                android:id="@+id/radioTypeDon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <RadioButton
                    android:id="@+id/btn_rd_unique"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_unique"/>
                <RadioButton
                    android:id="@+id/btn_rd_recurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_recurrent"/>
                <RadioGroup
                    android:id="@+id/radioTypeRecurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end">
                    <RadioButton
                        android:id="@+id/btn_rd_mensuel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mensuel"/>
                    <RadioButton
                        android:id="@+id/btn_rd_annuel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/annuel"/>
                </RadioGroup>
            </RadioGroup>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suivant"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textColor="@color/black"
        android:background="@drawable/btn_suivant"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textColor="@color/black"
        android:background="@drawable/btn_retour"
        android:layout_marginTop="10dp"/>
</LinearLayout>
