<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:text="@string/info"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fond_bleu_arrondi"
            android:padding="20dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/civilite"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/civilitepersonne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/nom"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/nompersonne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/prenom"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/prenompersonne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/mail2"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/mailpersonne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"
                    android:text="@string/assospers"/>

                <TextView
                    android:id="@+id/assospersonne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:text="@string/mesdon"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/don"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/donhisto"
                android:background="@drawable/fond_rose_arrondi"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:text="@string/paramapp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/langue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/changelangue"
                android:background="@drawable/fond_violet_arrondi"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:text="@string/plusinfo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/legacy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/mention"
                android:layout_marginBottom="10dp"
                android:background="@drawable/fond_gris_arrondi"/>

            <Button
                android:id="@+id/policy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/politique"
                android:layout_marginBottom="10dp"
                android:background="@drawable/fond_gris_arrondi"/>

            <Button
                android:id="@+id/condition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/condition"
                android:layout_marginBottom="10dp"
                android:background="@drawable/fond_gris_arrondi"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_deco"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/deco"
                android:layout_marginBottom="10dp"
                android:textColor="@color/rouge2"
                android:background="@drawable/btn_se_deconnecter"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>